--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
         <!-- Spring Boot -->
         <start-class>dojo.weather.forecast.Application</start-class>
-        <spring-boot.version>3.3.0</spring-boot.version>
+        <spring-boot.version>3.2.5</spring-boot.version>
         <assertj-core.version>3.26.0</assertj-core.version>
     </properties>
 
@@ -47,6 +47,11 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
         <dependency>
