--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,7 @@
                     <execution>
                         <goals>
                             <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -180,7 +181,6 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <release>${java.version}</release>
-                    <compilerVersion>${java.version}</compilerVersion>
                     <debug>true</debug>
                     <showWarnings>true</showWarnings>
                 </configuration>
